<resources>
    <string name="app_name">Quitting Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Quitting Guide</string>
    <string name="nav_header_subtitle">명지전문대 전자공학과</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_area">Smoke Area</string>
    <string name="menu_tobacco_list">Tobacco List</string>
    <string name="menu_info">Info</string>
    <string name="menu_mypage">MyPage</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_MemberRegistration">Member Registration</string>
    <string name="menu_Login">Login</string>
</resources>
