<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_area"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_area" />
        <item
            android:id="@+id/nav_tobaccoList"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tobacco_list" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_info" />
    </group>

    <item android:title="User Menu">
        <menu>
            <item
                android:id="@+id/nav_myPage"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_mypage" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_setting" />
        </menu>
    </item>

</menu>
