<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smkguide.ui.smokearea.SmokeAreaFragment"
        android:label="@string/menu_area"
        tools:layout="@layout/fragment_smokearea" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smkguide.ui.tobaccolist.TobaccoListFragment"
        android:label="@string/menu_tobacco_list"
        tools:layout="@layout/fragment_tobaccolist" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smkguide.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.smkguide.ui.mypage.MyPageFragment"
        android:label="@string/menu_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.smkguide.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>